<resources>
    <string name="app_name">ShopApp</string>
    <string name="payment_successful">Payment Successful!</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="product_image">Product Image</string>
    <string name="cashout_140pts">Cashout 140pts</string>
    <string name="_120">120$</string>
    <string name="_149"><strike>149$</strike></string>
    <string name="offers">Offers</string>
    <string name="favorite">Favorite</string>
    <string name="arrow">Arrow</string>
    <string name="various_installment_options">Various Installment Options</string>
    <string name="monthly_installment">Monthly Installment</string>
    <string name="jumla_birthday">Jumla Birthday</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="shopping_cart">shopping Cart</string>
    <string name="discusses_the_factors_that_make_a_logo_successful_by_analyzing_the_research_brainstorming_sketching_and_stylistic_experiments_that_led_to_its_development">discusses_the_factors_that_make_a_logo_successful_by_analyzing_the_research_brainstorming_sketching_and_stylistic_experiments_that_led_to_its_development</string>
    <string name="start_shopping">start_shopping</string>
    <string name="asd">Discusses the factors that make a logo successful by analyzing the research, brainstorming, sketching, and stylistic experiments that led to its development</string>
    <string name="start_shopping1">start shopping</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="official_store">official store</string>
    <string name="discusses_the_factors_that_make_a_logo_successful_by_analyzing_the_research_brainstorming_sketching_and_stylistic_experiments_that_led_to_its_development1">Discusses The Factors That Make A Logo Successful By Analyzing The Research, Brainstorming, Sketching, And Stylistic Experiments That Led To Its Development</string>
    <string name="back">back</string>
    <string name="my_cart">My Cart</string>
    <string name="subtotal_2_items">Subtotal (2 items)</string>
    <string name="_240">240$</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="increase">increase</string>
    <string name="decrease">decrease</string>
    <string name="_2">2</string>
    <string name="delete">delete</string>
    <string name="this_product_is_very_important_and_most_seller">This Product Is Very Important And Most Seller</string>
    <string name="oil">Oil</string>
    <string name="receipt">Receipt</string>
</resources>