<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:fontFamily="@font/poppins_regular">

    <TextView
        android:id="@+id/titleCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="55dp"
        android:layout_marginStart="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/cartIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="220dp"
        android:contentDescription="@string/shopping_cart"
        android:src="@drawable/ic_shopping_cart"
        app:tint="#FFA500"
        app:layout_constraintTop_toBottomOf="@id/titleCart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/cartDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/asd"
        android:textColor="#5B5959"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/cartIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/startShoppingBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FF9900"
        android:text="@string/start_shopping1"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/cartDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>