<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/productImageCard"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/product_image"
                android:scaleType="centerCrop"
                android:src="@drawable/oil" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/productName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/oil"
            android:textColor="#333333"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/deleteButton"
            app:layout_constraintStart_toEndOf="@id/productImageCard"
            app:layout_constraintTop_toTopOf="@id/productImageCard" />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/this_product_is_very_important_and_most_seller"
            android:textColor="#666666"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/deleteButton"
            app:layout_constraintStart_toStartOf="@id/productName"
            app:layout_constraintTop_toBottomOf="@id/productName" />

        <ImageView
            android:id="@+id/deleteButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete"
            android:padding="6dp"
            android:src="@drawable/ic_trash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FF5252" />

        <LinearLayout
            android:id="@+id/quantityLayout"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/itemTotal"
            app:layout_constraintStart_toStartOf="@id/productName">


            <androidx.cardview.widget.CardView
                android:id="@+id/decreaseButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_minus" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/quantityText"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_2"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/increaseButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardBackgroundColor="#009D9C9C"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_plus" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/itemTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_120"
            android:textColor="#FFA500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/productDescription"
            app:layout_constraintStart_toStartOf="@id/productName"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
